[package]
name = "schnecke"
version = "0.1.0"
authors = ["mocchi <boom.boom.planet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
hyper-tls = "0.4.1"
url = "2.1.1"
yaml-rust = "0.4"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
